# pokemon-sims

./: .audit-refresh-80c214.txt  .ci-refresh-438-final.txt  .ci-refresh-450.txt  .gitignore  .issue-881-rerun  .issue1118-refresh  CMakeLists.txt  EXPORT_1118_TRIGGER.txt  README.md  README.txt  RECOVERY_TRIGGER.txt  SIM-PLAN.md  issue-1111-fixed-seed-7180.txt  issue-1115-audit-seed-861.txt  issue-1117-audit-seed-8697.txt
.ci/: apply_issue_1379.py  issue-1379-bench-order-refinement.patch  issue-1379-fix.patch  issue-1379-prerequisite-1378.patch  issue-1379-test-lifetime.patch  issue1096-trigger  update_issue_1378_expectation.py
.github/: agent-trigger-1017  agent-trigger-1022  ci-trigger-1264.txt  ci-trigger-944.txt  debug_static_scan.py  export-source-1118-trigger.txt  final-ci-942.txt  final-ci-944.txt  final-integration-ci.txt  issue-1098-ci-recheck.txt  issue-1139.patch  issue-1167-materialize-trigger.txt  issue-1288-bootstrap.py  issue-1420-refinement.patch.gz.b64  issue-1420.patch.gz.b64  issue-1425.patch  issue-1425.patch.gz.b64  issue-525.patch  issue-915-trigger.txt  issue-917-ci-trigger.txt  issue-944.patch  issue1111.patch.b64  issue1117.patch.b64  pc-feature-trigger  pc-maintainer-retrigger  trigger-655-ci.txt
.issue1118/: materialize.trigger  payload.00  payload.part001  payload.part002  payload.part003  payload.part004  payload.part005  payload.part006  payload.part007  payload.part008  payload.part009  payload.part010  payload.part011  payload.part012  payload.part013  payload.part014  payload.part015  payload.part016  payload.part017  payload.part018  payload.part019  payload.part020  payload.part021  payload.part022  payload.part023  payload.part024  payload.part025  payload.part026  payload.part027  payload.part028  payload.part029  payload.part030  payload.part031  payload.part032  payload.part033  payload.part034  payload.part035
analysis/: quick_ball_to_communication.cpp
audit/: debug-pass-20260718-0254.txt  issue_1343_arven_held_payload_probe.cpp
build-agent/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  regidrago_sim
build-finalize/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  regidrago_sim  regidrago_unified_tests  smoke_results.csv
data/: .issue-1181-ci-trigger  card_audit.json  decklist.json
docs/: .issue-1167-source-export-trigger  .issue-1394-ci-trigger  AUDIT_2026-07-22.md  AUDIT_2026-07-23_CURRENT_MAIN.md  AUDIT_2026-07-23_MAIN_294B.md  AUDIT_CORRECTIONS.md  AUDIT_STATUS.md  CARD_AUDIT.md  CORE_AUDIT_FIXTURES_ADDENDUM.md  CORRECTIONS.md  CROBAT_MODEL_REPORT.md  DEBUG_AUDIT_2026-07-22.md  DEBUG_AUDIT_2026-07-23.md  DEBUG_AUDIT_20260723_0836.md  DEBUG_AUDIT_TRIGGER_20260719.md  DEBUG_VALIDATION_20260718.md  ISSUE_1098_REFINEMENT.md  ISSUE_1167_VALIDATION.md  ISSUE_1185_VALIDATION.md  ISSUE_1299_VALIDATION.md  ISSUE_1301_VALIDATION.md  ISSUE_1304_REFINEMENT.md  ISSUE_1304_VALIDATION.md  ISSUE_1333_VALIDATION.md  ISSUE_1452_VALIDATION.md  MODEL_ASSUMPTIONS.md  MULTI_DECK_REPORT.md  OPTIMAL_POLICY_FIXTURES.md  PERMANENT_ISSUE_WORKFLOWS.txt  POLICY_DECISIONS.md  REPORT.md  RULES_AND_INTERACTIONS.md  RULES_REVERIFICATION.md  RULES_TRACEABILITY.md  RULE_SOURCES.md  SIMULATOR_AUDIT.md  STRICT_JIT_MODEL.md  T5_FAILURE_POLICY.md  TEMP_MANUAL_TRACE_CLEANUP.md  TEMP_MANUAL_TRACE_COMMAND.txt  (+13 more)
results/: .issue718-baseline-pending  README.md  baseline_manifest.json  crobat_variant_model.csv  multi_deck_comparison.csv  multi_deck_manifest.json  policy_fixture_test_output.txt  simulation_results.csv  tier2_validation.txt  variant_results.csv
scripts/: .issue-881-final-rerun  .issue-881-rerun-marker  apply_issue_1126_patch.py  apply_issue_1195.py  apply_issue_1205_v2_patch.py  apply_issue_1235_v2_patch.py  apply_issue_1254_final.py  apply_issue_1254_v2_patch.py  apply_issue_1255_v2_patch.py  apply_issue_1256_v3_patch.py  apply_issue_1257_v3_patch.py  apply_issue_1258_patch.py  apply_issue_1258_v2_patch.py  apply_issue_1259_patch.py  apply_issue_1259_v2_patch.py  apply_issue_1299_patch.py  apply_issue_1300_patch.py  apply_issue_1313_patch.py  apply_issue_1314_patch.py  apply_issue_1315_patch.py  apply_issue_1329_expectation_updates.py  apply_issue_1329_fix.py  apply_issue_1335_fix.py  apply_issue_1337_fix.py  apply_issue_1337_reclaim.py  apply_issue_1339_fix.py  apply_issue_1339_reclaim.py  apply_issue_1341_fix.py  apply_issue_1343_fix.py  apply_issue_1343_followup_tests.py  apply_issue_1343_probe_lifetime_fix.py  apply_issue_1343_probe_ultra_fix.py  apply_issue_1351_fix.py  apply_issue_1356_arven_timing_fix.py  apply_issue_1356_fix.py  apply_issue_1368_fix.py  apply_issue_1369_fix.py  apply_issue_1376_fix.py  apply_issue_1377_compat.py  apply_issue_1377_fix.py  (+46 more)
src/: regidrago_sim.cpp  regidrago_sim_fixed.cpp
tests/: arven_complementary_latias_route_tests.cpp  arven_fss_blender_contention_tests.cpp  arven_fss_rulebox_tests.cpp  arven_heavy_ball_prize_tests.cpp  arven_item_lock_tests.cpp  bench_vstar_energy_target_tests.cpp  benched_vstar_recovery_tests.cpp  blender_active_promotion_gate_tests.cpp  blender_active_route_tests.cpp  blender_burnet_priority_tests.cpp  blender_energy_completion_gate_tests.cpp  blender_energy_completion_tests.cpp  blender_energy_ready_turn_gate_tests.cpp  blender_fss_tate_hold_tests.cpp  blender_vstar_card_axis_tests.cpp  burnet_no_vstar_route_tests.cpp  burnet_ready_turn_gate_tests.cpp  card_audit_category_contract_tests.py  card_audit_contract_tests.py  celestial_roar_live_route_tests.cpp  check_active_tapu_paid_retreat.cmake  check_future_wonder_tag_crispin.cmake  cli_mode_compatibility_tests.cmake  costed_search_target_outlet_tests.cpp  crispin_one_type_manual_attachment_tests.cpp  debug_vital_dance_distinct_type_probe.cpp  deck_payload_outlet_tests.cpp  discard_recovery_provenance_tests.cpp  duplicate_earthen_vessel_cost_tests.cpp  duplicate_mysterious_treasure_cost_tests.cpp  duplicate_quick_ball_cost_tests.cpp  empty_deck_search_tests.cpp  erika_deck_thinning_tests.cpp  erika_discard_tables_tests.cpp  evolution_incense_payload_tests.cpp  (+261 more)
(+817 files in other folders)
